# de_test

./: README.md  docker-compose.yaml  marketing_campaign_dataset_head.csv  pyproject.toml  spark.ipynb  test.ipynb
de_test/: pyvenv.cfg
