[project]
name = "de-test"
version = "0.1.0"
description = ""
authors = [
    {name = "MP"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "pyspark (>=3.5.4,<4.0.0)",
    "pymongo (>=4.11.1,<5.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "boto3 (>=1.36.20,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
